--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
@@ -391,7 +391,7 @@ else if (noticiaTipoSeleccionada == NoticiaTipo.Suscripciones.ToString())
             }
             else if (noticiaTipoSeleccionada == NoticiaTipo.Web.ToString())
             {
-                noticia.Imagen = "/logo/logoentrada.webp";
+                noticia.Imagen = "https://pepeizqdeals.com/logo/logoentrada.webp";
             }
         }
     }
@@ -432,6 +432,12 @@ else if (noticiaTipoSeleccionada == NoticiaTipo.Suscripciones.ToString())
                 noticiaAñadir.TituloEn = noticia.TituloEn;
                 noticiaAñadir.TituloEs = noticia.TituloEs;
                 noticiaAñadir.Imagen = noticia.Imagen;
+
+                if (noticiaAñadir.Imagen.Contains("https://") == false || noticiaAñadir.Imagen.Contains("http://") == false)
+                {
+                    noticiaAñadir.Imagen = "https://pepeizqdeals.com" + noticiaAñadir.Imagen;
+                }
+
                 noticiaAñadir.ContenidoEn = noticia.ContenidoEn;
                 noticiaAñadir.ContenidoEs = noticia.ContenidoEs;
                 noticiaAñadir.Juegos = noticia.Juegos;
