--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -1577,7 +1577,7 @@
 							}
 						}
 
-						<RadzenCategoryAxis Formatter="FormatoFecha" FormatString="{0:C0}">
+						<RadzenCategoryAxis Formatter="FormatoFecha" FormatString="{0:C0}" Padding="30">
 							<RadzenGridLines Visible="true" Stroke="var(--fondoMinimo)" StrokeWidth="1" />
 							<RadzenAxisTitle Text="@Idiomas.CogerCadena(idioma, "String65", "Game")" />
 						</RadzenCategoryAxis>
