--- a/pepeizqs deals web/Pages/Componentes/Interfaz/RedesSociales.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/RedesSociales.razor
@@ -16,7 +16,7 @@
         <a href="@steam" target="_blank"><i class="fa-brands fa-steam"></i></a>
     </div>
     <div>
-        <a href="@rss" target="_blank"><i class="fa-solid fa-rss"></i></a>
+        <a href="@rss"><i class="fa-solid fa-rss"></i></a>
     </div>
     <div>
         <a href="@bluesky" target="_blank"><i class="fa-brands fa-bluesky"></i></a>
