--- a/pepeizqs deals web/Pages/Componentes/Admin/Humble.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Humble.razor
@@ -2,26 +2,51 @@
 @using Microsoft.Data.SqlClient
 
 <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px">
-	<textarea id="humble-texto" @onchange="(e => TextoCambiaNombre(e))" class="entrada-texto" rows="20">@textoNombre</textarea>
+	<textarea id="humble-texto" class="entrada-texto" rows="20" @onchange="(e => TextoCambiaContenido(e))">@textoContenido</textarea>
 </div>
 
 @code {
 
 	#nullable disable
 
-	private string textoNombre = string.Empty;
+	private string textoContenido = string.Empty;
 
-	private void TextoCambiaNombre(ChangeEventArgs texto)
+	protected override async Task OnInitializedAsync()
+	{
+		PeriodicTimer cronometro = new PeriodicTimer(TimeSpan.FromSeconds(1));
+
+		while (await cronometro.WaitForNextTickAsync())
+		{
+			if (string.IsNullOrEmpty(textoContenido) == false)
+			{
+				SqlConnection conexion = Herramientas.BaseDatos.Conectar();
+
+				using (conexion)
+				{
+					APIs.Humble.Tienda.RecopilarOfertas(textoContenido, conexion);
+				}
+
+				textoContenido = null;
+			}
+		}
+	}
+
+	private void TextoCambiaContenido(ChangeEventArgs texto)
 	{
 		if (string.IsNullOrEmpty(texto.Value.ToString().Trim()) == false)
 		{
-			string nuevoTexto = texto.Value.ToString().Trim();
+			textoContenido = texto.Value.ToString().Trim();
 
-			SqlConnection conexion = Herramientas.BaseDatos.Conectar();
-
-			using (conexion)
+			if (string.IsNullOrEmpty(textoContenido) == false)
 			{
-				APIs.Humble.Tienda.RecopilarOfertas(nuevoTexto);
+				SqlConnection conexion = Herramientas.BaseDatos.Conectar();
+
+				using (conexion)
+				{
+					APIs.Humble.Tienda.RecopilarOfertas(textoContenido, conexion);
+				}
+
+				textoContenido = null;
 			}
 		}
 	}
