--- a/pepeizqs deals web/Pages/Shared/_Imports.razor
+++ b/pepeizqs deals web/Pages/Shared/_Imports.razor
@@ -9,5 +9,4 @@
 @using System.IO    
 @using pepeizqs_deals_web
 @using pepeizqs_deals_web.Pages.Componentes
-@using Radzen
-@using Radzen.Blazor
+@using ApexCharts
