--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -3137,6 +3137,11 @@
                 Row = new GridRow
                 {
                     Colors = new List<string> { "transparent" }
+                },
+                Padding = new Padding
+                {
+                    Right = 30,
+                    Left = 30
                 }
             },
             Markers = new Markers { Shape = ShapeEnum.Circle, Size = 5, FillOpacity = new Opacity(0.8d) },
