--- a/pepeizqs deals web/Pages/Admin/Humble.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Humble.cshtml
@@ -32,5 +32,10 @@
 
 @if (adminLogeado == true)
 {
-    @(await Html.RenderComponentAsync<pepeizqs_deals_web.Pages.Componentes.Admin.Humble>(RenderMode.Server))
+    <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px">
+        <form method="post">
+            <textarea id="humble-texto" class="entrada-texto" rows="20" asp-for="Input.contenido"></textarea>
+            <input id="humble-enviar" type="submit" value="Enviar">
+        </form>
+    </div>
 }
