--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -28,6 +28,7 @@
     --deckVerificado: #59bf40;
     --deckJugable: #ffc82c;
     --fondoOpcionesTransparente: rgba(13, 22, 33, 0.95);
+    --fondoBandaSonora: #ab4364;
 }
 
 @font-face {
